# sit-ozon-seller-bot

./: .dockerignore  .gitignore  DIAGNOSTIC_REPORT.md  Dockerfile  LICENSE  PEP8_FINAL_REPORT.py  README.md  bot.py  bot_backup.py  check_config.py  docker-compose.yml  implementation_plan.md  install.py  main.py  menu.py  new_features_plan.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  scheduler.py  test_config_clean.py  test_simple_config.py  typed_dicts.py
config_package/: __init__.py  cache.py  constants.py  json_utils.py  logging_config.py  migration.py  settings.py  sku_utils.py
docs/: DEVELOPER_GUIDE.md  MIGRATION.md  PHASE2_CHECKLIST.md  QUICKSTART.md  README.md  REFACTORING_CHECKLIST.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  architecture.md
handlers/: __init__.py  handlers_purchases.py  handlers_sales.py  handlers_shipments_demand.py  handlers_shipments_leadtime.py  handlers_shipments_leadtime_stats.py  handlers_shipments_need.py  handlers_shipments_status.py
modules_common/: cache_manager.py  calendar.py  paths.py  ui.py  units.py
modules_finance/: services.py  views.py
modules_marketing/: services.py  views.py
modules_operations/: services.py  views.py
modules_purchases/: __init__.py  purchases_need.py  purchases_need_data.py  purchases_report.py  purchases_report_data.py
modules_sales/: __init__.py  sales_buyout.py  sales_facts_store.py  sales_forecast.py  sales_goal.py  sales_report.py  sales_traffic.py  services.py  views.py
modules_shipments/: __init__.py  shipments_demand.py  shipments_demand_data.py  (+8 more)
(+19 files in other folders)
