[project]
name = "ozon-seller"
version = "1.0.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.autopep8]
max_line_length = 100
aggressive = 3
in-place = true
recursive = true
exclude = '.git,__pycache__,.venv,venv'
